# marathon-decomp

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-DATA  README.md  pyproject.toml
data/course_profile/: marathon_year_elevation.csv
data/misc/: dataset_summary.md  race_stats_summary.csv
data/race_results/: competitions.parquet  manifest.json
data/weather/: marathon_weather_features.csv
results/analysis/aging_trend/: aging_curve_dashboard.html  aging_descriptors.csv  aging_descriptors.md  fan_identifiability.csv  fan_identifiability.md
results/analysis/covariate/: covariate_summary_ALL_B.md
results/analysis/di_distribution/: density_band.csv  di_descriptors.csv  di_descriptors.md  di_dist_summary_ALL.md  di_entryage_bins.csv  di_entryage_slope.csv  fig_di_spread_records.md
results/analysis/race_comparison/: vj_contrast_identifiability.csv  vj_contrast_identifiability.md
results/model_selection/aging/: aging_dashboard.html  aging_summary_ALL_B_14-25_mrc2.md  (+7 more)
scripts/: paper.mplstyle  report_md.py
scripts/01_data_prep/: dataset_summary.py  make_fake_export.py  plot_finish_time_age_hist.py
scripts/03_model_fit/: e10_bootstrap.py
scripts/aging_common/: __init__.py  fitting.py
scripts/baseline_common/: __init__.py  convergence_plot.py  fitting.py  inits.py  slices.py
scripts/drift_common/: __init__.py  convergence_plot.py  fitting.py
scripts/visualizations/: race_dashboard.py
src/marathon_decomp/: __init__.py  aging.py  base.py  config.py  crossval.py  data.py  kernels.py  registry.py  resample.py
tests/: test_synthetic_recovery.py
(+380 files in other folders)
