[project]
name = "marathon-decomp"
version = "1.0.0"
description = "Latent factor decomposition of marathon finish times into separable athlete and race effects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Dillon Chang"}]
keywords = ["latent factor model", "robust regression", "marathon",
            "endurance sports", "record linkage", "empirical bayes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

# TODO: set the real repository URL before publishing.
[project.urls]
Repository = "https://github.com/<your-username>/marathon-decomp"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "numba>=0.58",
    "scipy>=1.11",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
reports = [
    "statsmodels>=0.14",
]
dev = [
    "pytest>=7",
    "statsmodels>=0.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
